--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
 }
 
 :root {
+  --cor0: black;
+  --cor1: white;
+  --cor3: rgb(49, 49, 49);
+  --transparent: rgba(0, 0, 0, 0.151);
   --yellow:#FDD835;
   --blue:#2196F3;
   --green:#4CAF50;
@@ -28,6 +32,12 @@
 
 html {
   box-sizing: border-box;
+  background-color: var(--cor0);
+  color: white;
+  background-size: cover;
+  background-position: right center;
+  box-shadow: inset 0px 10px 5px 0px var(--transparent);
+  background-attachment: fixed;
 }
 
 *::before,
@@ -40,6 +50,7 @@ html {
 
 body{
   font-family: 'Open Sans', sans-serif;
+  background-color: rgba(46, 46, 46, 0.336);
   
 }
 
@@ -54,57 +65,20 @@ header {
 }
 
 article.header {
-    padding: 10px;
+      padding: 10px;
       border-bottom: 1px solid #f3f3f3;
       padding: 1rem 0;
 }
 
-section.version.header.version-num {
-    margin: 1rem 0;
+h2.version-num {
+  margin: 0 0 10 0px;
     position: relative;
     display: flex;
     align-items: center;
-}
+}        
 
-.-planned {
-        color: rgba(0, 0, 0, 0.9);
-      }
-      
-.-labelled {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid rgba(0,0,0,.5);
-        background: transparent;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-}
-        
-
-.-deprecated {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid transparent;
-        color: white;
-        background: #4d4d4d;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-}
-.-declined {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid rgba(0,0,0,.3);
-        color: rgba(0,0,0,.5);
-        background: transparent;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-        text-decoration: line-through;
-}
-.datetime>*:not(:first-child){
-      margin: 0 0 0 10px;
-      color: rgba(0,0,0,.5);
+.datetime{
+      color: rgba(214, 214, 214, 0.897);
       margin: 0 0 0 10px;
 }
   .label, .label-inline {
@@ -190,6 +164,8 @@ li#none {
 }
 
 ul, ol {
+    background-color: var(--transparent);
+    color: var(--cor1);
     list-style-position: inside;
 }   
 
