--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
 }
 
 header {
-  border-bottom: 3px solid #f3f3f3;
+  border-bottom: 3px solid #525151;
   padding: 1px;
 }
 
@@ -59,53 +59,17 @@ article.header {
       padding: 1rem 0;
 }
 
-section.version.header.version-num {
-    margin: 1rem 0;
+.version-num {
+    margin: 10 0 0 0px;
     position: relative;
     display: flex;
     align-items: center;
-}
+}        
 
-.-planned {
-        color: rgba(0, 0, 0, 0.9);
-      }
+.datetime{
+      margin: 0 0 0 5px;
+      color: rgba(0, 0, 0, 0.678);
       
-.-labelled {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid rgba(0,0,0,.5);
-        background: transparent;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-}
-        
-
-.-deprecated {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid transparent;
-        color: white;
-        background: #4d4d4d;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-}
-.-declined {
-        display: inline-flex;
-        padding: 0 4px;
-        border: 2px solid rgba(0,0,0,.3);
-        color: rgba(0,0,0,.5);
-        background: transparent;
-        border-radius: 5px;
-        align-items: center;
-        justify-content: center;
-        text-decoration: line-through;
-}
-.datetime>*:not(:first-child){
-      margin: 0 0 0 10px;
-      color: rgba(0,0,0,.5);
-      margin: 0 0 0 10px;
 }
   .label, .label-inline {
     display: inline-flex;
